# EduTenant

backend/: .env  Dockerfile  README.md  docker-compose.yml  docker-compose_old.yml  docker-entrypoint.sh  docker.env  pyproject.toml  start.sh
backend/app/: main.py
backend/app/apis/: global_router.py  openai_routes.py  routers.py  tenant_router.py
backend/app/config/: settings.py  tenant_dependencies.py
backend/app/crud/: base.py
backend/app/db/: base_class.py  init_db.py  init_models.py  redis.py  session.py
backend/app/docs/: openapi_utils.py
backend/app/domains/auth/: __init__.py
backend/app/domains/auth/apis/: login_router.py  permission.py  role.py  tenant_user_router.py  users_router.py
backend/app/domains/auth/models/: __init__.py  permission.py  refresh_token.py  role.py  role_permission.py  tenant_user.py  token_blocklist.py  user_permissions.py  user_role.py  users.py
backend/app/domains/auth/repository/: login_repository.py  permission.py  role.py  tenant_user_repo.py  token_blocklist.py  user_account.py  user_repository.py
backend/app/domains/auth/schemas/: auth.py  login_schema.py  (+7 more)
backend/app/middleware/: tenant.py
backend/app/migrations/: env.py
backend/app/rds/: worker.py
backend/app/utils/: auth_dep.py  core.py  dependencies.py  errors.py  schema_utils.py  security.py  seeder.py  tenant.py  tenant_bootstrapper.py  token_interface.py
backend/migrations/: env.py  env_old.py
backend/migrations/versions/: 0215037c3e09_init.py  12fa4d624308_initial_public_schema.py  6ed2fbfcf7b7_.py  c5ed6c57bf38_initial_public_schema.py
(+41 files in other folders)
